# src/service/user/route.rs
@@ -1,13 +1,13 @@
 use axum::{
     body::Body,
     extract::State,
-    http::{header::SET_COOKIE, StatusCode},
+    http::{header::SET_COOKIE, HeaderMap, StatusCode},
     response::{AppendHeaders, IntoResponse},
     Json,
 };
 use sqlx::PgPool;
 
-use super::model;
+use super::model::{self, user_id_from_header, UserError};
 
 #[utoipa::path(
     post,
@@ -88,8 +88,47 @@ pub async fn login(
         .into_response()
 }
 
+/// ユーザー情報を取得
+#[utoipa::path(
+    get,
+    path = "/users",
+    responses(
+        (status = 200, description = "OK", body = User),
+        (status = 400, description = "Bad Request", body = UserError, example = json!(model::UserError::Unauthorized(String::from("認証に失敗しました")))),
+    )
+)]
+pub async fn show_user(
+    headers: HeaderMap,
+    State(db): State<PgPool>,
+) -> impl IntoResponse {
+    let user_id = match user_id_from_header(&headers) {
+        Some(id) => id,
+        None => {
+            return (
+                StatusCode::UNAUTHORIZED,
+                Json(UserError::Unauthorized(String::from("missing user id"))),
+            )
+                .into_response()
+        }
+    };
+
+    let user = match model::show_user(&user_id, &db).await {
+        Ok(user) => user,
+        Err(_) => {
+            return (
+                StatusCode::BAD_REQUEST,
+                Json(UserError::Unauthorized(String::from("認証に失敗しました"))),
+            )
+                .into_response()
+        }
+    };
+
+    (StatusCode::OK, Json(user)).into_response()
+}
+
 #[cfg(test)]
 mod tests {
+
     use axum::{
         body::Body,
         http::{header, Method, Request},
@@ -98,7 +137,7 @@ mod tests {
     use sqlx::{self, PgPool};
     use tower::ServiceExt;
 
-    use crate::routes::routes::init_app;
+    use crate::{routes::routes::init_app, service::user::model::token_cookie_from_user_id};
 
     #[sqlx::test(fixtures("users", "invitations"))]
     async fn test_new_user(pool: PgPool) {
@@ -226,5 +265,32 @@ mod tests {
         let headers = res.headers();
         let cookie = headers.get(header::SET_COOKIE).unwrap();
         assert!(cookie.to_str().unwrap().contains("token="));
+    }
+
+    #[sqlx::test(fixtures("users", "invitations"))]
+    async fn test_show_user(pool: PgPool) {
+        let router = init_app(&pool);
+
+        // ユーザー情報取得 認証に失敗した場合
+        let user_token = token_cookie_from_user_id("invalid_user_id");
+        let req = Request::builder()
+        .uri("/users")
+        .method(Method::GET)
+        .header(header::COOKIE, &user_token)
+        .body(Body::empty())
+        .unwrap();
+        let res = router.clone().oneshot(req).await.unwrap();
+        assert_eq!(res.status(), 400);
+    
+    // ユーザー情報取得 成功した場合
+        let user_token = token_cookie_from_user_id("used_id");
+        let req = Request::builder()
+            .uri("/users")
+            .method(Method::GET)
+            .header(header::COOKIE, &user_token)
+            .body(Body::empty())
+            .unwrap();
+        let res = router.clone().oneshot(req).await.unwrap();
+        assert_eq!(res.status(), 200);
     }
 }
